# 2025-p1-nawal-0

./: README.md  pyproject.toml
todo/: __init__.py
todo/views/: routes.py
